# my-http-server-prometheus

./: Cargo.toml
examples/: metrics_middleware_example.rs
examples/app/: app_context.rs
src/: lib.rs  main.rs
src/metrics/: mod.rs  my_metrics.rs  my_metrics_factory.rs
src/metrics_middleware/: middleware.rs  mod.rs
