[package]
name = "my-http-server-prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = {branch= "main", git= "https://github.com/MyJetTools/rust-extensions.git"}
my-http-server = {branch = "0.1.1-prometheus", git = "https://github.com/MyJetTools/my-http-server.git"}
prometheus = { version = "*", features = ["process"] }
lazy_static = "*"
async-trait = "*"
tokio = { version = "1", features = ["full"] }